<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/mainbutton_selector"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/mainbutton_neighbourhood_selector"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/mainbutton_activity_selector"
            android:title="@string/title_notifications"/>
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/mainbutton_my_selector"
        android:title="@string/title_my"/>

</menu>
