<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="106dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_pw_hint"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/pw_txt_tips_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_phone_sendverify"
            android:textColor="@color/colorGray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pw_txt_tips_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_login_pw_hint" />

        <EditText
            android:id="@+id/pw_txt_tips_repw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_login_repw_hint" />


    </LinearLayout>

    <TextView
        android:id="@+id/pw_txt_verifyLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/txt_login_btn_bg"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pw_txt_skip"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt_login_skip"
        android:textColor="@color/color_getverify" />
</LinearLayout>