<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beijing2x"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_20">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_9_05"
            android:layout_height="@dimen/dp_16_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/fanhubai" />

        <TextView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_18"
            android:layout_centerInParent="true"
            android:text="@string/scan_open"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_16" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/dp_345"
        android:layout_height="434.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/qr_code_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_39_5"
            android:text="@string/shuaxin"
            android:textSize="@dimen/dp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="@dimen/dp_182_5"
            android:layout_height="@dimen/dp_182_5"
            android:layout_marginTop="@dimen/dp_83"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_280"
            android:text="@string/new_achieve"
            android:textSize="@dimen/dp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_guide"
            android:layout_width="@dimen/dp_51"
            android:layout_height="@dimen/dp_51"
            android:layout_marginLeft="@dimen/dp_89"
            android:layout_marginTop="@dimen/dp_353_5"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/shoujihaoma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_13"
                android:text="@string/look_guide"
                android:textSize="@dimen/dp_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_call"
            android:layout_width="@dimen/dp_51"
            android:layout_height="@dimen/dp_51"
            android:layout_marginTop="@dimen/dp_353_5"
            android:layout_marginRight="@dimen/dp_89"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/shoujihaoma" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_13"
                android:text="@string/call_wuye"
                android:textSize="@dimen/dp_12" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
